--- a/a-05/test/Makefile
+++ b/a-05/test/Makefile
@@ -6,8 +6,8 @@ LDFLAGS=-lpthread -L${GTEST_BASE}/lib -lgtest
 INCLUDES=-I${GTEST_BASE}/include -I../
 
 OBJS = testsuite.o \
-			 sparse_array_test.o \
-			 #list_test.o
+			 list_test.o
+			# sparse_array_test.o \
 			 #find_mean_rep_test.o \
 			 histogram_test.o \
 
